[package]
name = "rust-3d-demo"
version = "0.1.0"
authors = ["almagest"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
js-sys = "0.3"
lazy_static = "1.4"
nalgebra = "0.24.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "^0.3"
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]