[package]
name = "deco"
version = "0.1.0"
authors = ["Almagest <almagest0328@gmail.com>"]
edition = "2018"
description = "A kilo editor written in Rust"
include = ["src/*.rs", "Cargo.toml"]
keywords = ["text-editor", "editor", "terminal", "tui"]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
libc = "0.2"
unicode-segmentation = "1.6"
serde = "^1.0.125"
toml = "0.5"
